--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -16,11 +16,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/tien.css">
-    <link rel="stylesheet" href="../css/truong.css">
     <link rel="stylesheet" href="../css/tu.css">
     <link rel="stylesheet" href="../css/van.css">
     <link rel="stylesheet" href="../css/quyen.css">
+    <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../navigation_css/chatbox.css">
     
     <title>GYMZ - Thể hình giới trẻ</title>
@@ -34,25 +35,29 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href=""><h1>GYM<span>Z</span></h1></a>
+                    <a href="">
+                        <h1>GYM<span>Z</span></h1>
+                    </a>
                 </div>
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="../index.html">TRANG CHỦ</a></li>
-                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#"><span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m></a>
+                                <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
+                                    <span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m>
+                                </a>
                                 <div class="containt">
-                                    <a href="#">THẺ HỘI VIÊN</a>
-                                    <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#">CỬA HÀNG WHEY</a>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./chatbox.html"><span>CHAT ONLINE</span></a>
                               </div>
                             </div>
                         </li>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -61,20 +66,47 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="menuroi">
-                        <a href="#">
-                            <i class='bx bx-menu' ></i>
+                    <div class="bt_dropdown">
+                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
+                            <i class='bx bx-menu'></i>
                         </a>
-                        <div class="noidung">
+                        <div class="content">
                             <div class="logo">
-                                <a href="">GYM<span>Z</span></a>
+                                <a class="logo__inner" href="">
+                                    GYM<span>Z</span>
+                                </a>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
-                            <a href="./forum.html"><i class='bx bx-world' ></i>DIỄN ĐÀN</a>
-                            <a href="#"><i class='bx bxs-file' ></i>DỊCH VỤ</a>
-                            <a href="./promotion.html"><i class='bx bxs-purchase-tag' ></i>KHUYẾN MÃI</a>
-                            <a href="#"><i class='bx bx-code-alt' ></i>TẬP THỬ MIỄN PHÍ</a>
+                            <a href="../index.html">
+                                <i class='bx bxs-home'></i>
+                                <span class="noidung__text1">
+                                    TRANG CHỦ
+                                </span>
+                            </a>
+                            <a href="./forum.html">
+                                <i class='bx bx-world' ></i>
+                                <span class="noidung__text1">
+                                    DIỄN ĐÀN
+                                </span>
+                            </a>
+                            <a href="#">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    DỊCH VỤ
+                                </span>
+                            </a>
+                            <a href="./promotion.html">
+                                <i class='bx bxs-purchase-tag' ></i>
+                                <span class="noidung__text1">
+                                    KHUYẾN MÃI
+                                </span>
+                            </a>
+                            <a href="#">
+                                <i class='bx bx-code-alt' ></i>
+                                <span class="noidung__text1">
+                                    TẬP THỬ MIỄN PHÍ
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +150,7 @@
     </div>
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <script src="../navigation_javascript/menu.js"></script>
+    <script src="../navigation_javascript/menuv2.js"></script>
 </body>
 
 </html>
