--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -16,8 +16,10 @@
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/truong.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/keyframes.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../navigation_css/shop.css">
     <link rel="stylesheet" href="../navigation_css/End_shoprtien.css">
     <link rel="stylesheet" href="../navigation_css/informationItem.css">
@@ -42,22 +44,22 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a href="../index.html">TRANG CHỦ</a></li>
-                        <li><a href="./forum.html">DIỄN ĐÀN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./forum.html">DIỄN ĐÀN</a></li>
                         <li>
                             <div class="dropdown">
-                                <a href="#"><span>DỊCH VỤ</span>
-                                    <m><i class='bx bxs-right-arrow'></i></m>
+                                <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
+                                    <span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="#">THẺ HỘI VIÊN</a>
-                                    <a href="#">HUẤN LUYỆN VIÊN</a>
-                                    <a href="#"><span>CỬA HÀNG WHEY</span></a>
-                                    <a href="../chatbox.html">CHAT ONLINE</a>
-                                </div>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html"><span>CỬA HÀNG WHEY</span></a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
+                              </div>
                             </div>
                         </li>
-                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -66,20 +68,47 @@
                     </ul>
                 </div>
                 <div class="header__inner__menu">
-                    <div class="menuroi">
-                        <a href="#">
+                    <div class="bt_dropdown">
+                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
                             <i class='bx bx-menu'></i>
                         </a>
-                        <div class="noidung">
+                        <div class="content">
                             <div class="logo">
-                                <a href="">GYM<span>Z</span></a>
+                                <a class="logo__inner" href="">
+                                    GYM<span>Z</span>
+                                </a>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a href="../index.html"><i class='bx bxs-home'></i>TRANG CHỦ</a>
-                            <a href="./forum.html"><i class='bx bx-world'></i>DIỄN ĐÀN</a>
-                            <a href="#"><i class='bx bxs-file'></i>DỊCH VỤ</a>
-                            <a href="./promotion.html"><i class='bx bxs-purchase-tag'></i>KHUYẾN MÃI</a>
-                            <a href="#"><i class='bx bx-code-alt'></i>TẬP THỬ MIỄN PHÍ</a>
+                            <a href="../index.html">
+                                <i class='bx bxs-home'></i>
+                                <span class="noidung__text1">
+                                    TRANG CHỦ
+                                </span>
+                            </a>
+                            <a href="./forum.html">
+                                <i class='bx bx-world' ></i>
+                                <span class="noidung__text1">
+                                    DIỄN ĐÀN
+                                </span>
+                            </a>
+                            <a href="#">
+                                <i class='bx bxs-file' ></i>
+                                <span class="noidung__text1">
+                                    DỊCH VỤ
+                                </span>
+                            </a>
+                            <a href="./promotion.html">
+                                <i class='bx bxs-purchase-tag' ></i>
+                                <span class="noidung__text1">
+                                    KHUYẾN MÃI
+                                </span>
+                            </a>
+                            <a href="#">
+                                <i class='bx bx-code-alt' ></i>
+                                <span class="noidung__text1">
+                                    TẬP THỬ MIỄN PHÍ
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -304,7 +333,7 @@
     <!-- overlay -->
     <div class="nen_mo"></div>
     <script src="./index.js"></script>
-    <script src="../navigation_javascript/menu.js"></script>
+    <script src="../navigation_javascript/menuv2.js"></script>
     <script  src="../navigation_javascript/shop.js" type="text/babel"></script>
 </body>
 
