--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -29,7 +29,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="../index.html">
+                    <a href="">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -44,10 +44,6 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./card.html">THẺ HỘI VIÊN</a>
-                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./chatbox.html">CHAT ONLINE</a>
                                     <a href="./card.html">THẺ HỘI VIÊN</a>
                                     <a href="./train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
@@ -87,28 +83,10 @@
                                     DIỄN ĐÀN
                                 </span>
                             </a>
-                            <a href="./card.html">
+                            <a href="#">
                                 <i class='bx bxs-file' ></i>
                                 <span class="noidung__text1">
-                                    THẺ HỘI VIÊN
-                                </span>
-                            </a>
-                            <a href="./train.html">
-                                <i class='bx bxs-file' ></i>
-                                <span class="noidung__text1">
-                                    HUẤN LUYỆN VIÊN
-                                </span>
-                            </a>
-                            <a href="./shop.html">
-                                <i class='bx bxs-file' ></i>
-                                <span class="noidung__text1">
-                                    CỬA HÀNG WHEY
-                                </span>
-                            </a>
-                            <a href="./chatbox.html">
-                                <i class='bx bxs-file' ></i>
-                                <span class="noidung__text1">
-                                    CHAT ONLINE
+                                    DỊCH VỤ
                                 </span>
                             </a>
                             <a href="./promotion.html">
@@ -117,7 +95,7 @@
                                     KHUYẾN MÃI
                                 </span>
                             </a>
-                            <a href="https://facebook.com/lst24">
+                            <a href="#">
                                 <i class='bx bx-code-alt' ></i>
                                 <span class="noidung__text1">
                                     TẬP THỬ MIỄN PHÍ
