--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -38,7 +38,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="../index.html">
+                    <a href="">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -71,16 +71,10 @@
                 <div class="header__inner__menu">
                     <div class="bt_dropdown">
                         <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                    <div class="bt_dropdown">
-                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
                             <i class='bx bx-menu'></i>
                         </a>
                         <div class="content">
-                        <div class="content">
                             <div class="logo">
-                                <a class="logo__inner" href="">
-                                    GYM<span>Z</span>
-                                </a>
                                 <a class="logo__inner" href="">
                                     GYM<span>Z</span>
                                 </a>
@@ -340,7 +334,6 @@
     <!-- overlay -->
     <div class="nen_mo"></div>
     <script src="./index.js"></script>
-    <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
     <script  src="../navigation_javascript/shop.js" type="text/babel"></script>
 </body>
