--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/tien.css">
     <link rel="stylesheet" href="./css/tu.css">
     <link rel="stylesheet" href="./css/van.css">
@@ -35,7 +36,7 @@
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
-                    <a href="./index.html">
+                    <a href="">
                         <h1>GYM<span>Z</span></h1>
                     </a>
                 </div>
@@ -50,7 +51,6 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
                                     <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
@@ -70,11 +70,7 @@
                     <div class="bt_dropdown">
                         <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
                             <i class='bx bx-menu'></i>
-                    <div class="bt_dropdown">
-                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                            <i class='bx bx-menu'></i>
                         </a>
-                        <div class="content">
                         <div class="content">
                             <div class="logo">
                                 <a class="logo__inner" href="">
