--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -83,12 +83,20 @@
                                     DIỄN ĐÀN
                                 </span>
                             </a>
-                            <a href="#">
-                                <i class='bx bxs-file' ></i>
-                                <span class="noidung__text1">
-                                    DỊCH VỤ
-                                </span>
-                            </a>
+                            <div class="submenu" href="#" onclick="toggleNoidung222(event)">
+                                <a href="">
+                                    <i class='bx bx-grid-alt'></i>
+                                    <span class="noidung__text1">
+                                        DỊCH VỤ
+                                    </span>
+                                </a>
+                                <div class="noidung222">
+                                    <a href="./card.html"><i class='bx bxs-tag-alt' ></i> THẺ HỘI VIÊN</a>
+                                    <a href="./train.html"><i class='bx bxs-tag-alt' ></i> HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html"><i class='bx bxs-tag-alt' ></i> CỬA HÀNG WHEY</a>
+                                    <a href="./chatbox.html"><i class='bx bxs-tag-alt' ></i> CHAT ONLINE</a>
+                                </div>
+                            </div>
                             <a href="./promotion.html">
                                 <i class='bx bxs-purchase-tag' ></i>
                                 <span class="noidung__text1">
@@ -287,6 +295,7 @@
     <div class="nen_mo"></div>
     <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
+    <script src="../navigation_javascript/menu.js"></script>
 </body>
 
 </html>
