--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="container__service__img__items container__service__img2">
                         <img src="./img/services/sv2.jpg">
-                        <p>Cơ hội trải nghiệm 40 bộ môn yoga cơ bản, nâng cao tại GYMZ</p>
+                        <p>Cơ hội trải nghiệm 40 bộ môn yoga cơ bản, nâng cao</p>
                     </div>
                     <div class="container__service__img__items container__service__img3">
                         <img src="./img/services/sv3.jpg" alt="">
