update slide show product

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -23,6 +22,7 @@
     <link rel="stylesheet" href="./css/tu.css">
     <link rel="stylesheet" href="./css/van.css">
     <link rel="stylesheet" href="./css/quyen.css">
+    <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/keyframes.css">
     <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
@@ -156,7 +156,7 @@
                         giúp bạn đạt được mục tiêu sức khỏe và hình thể.
                     </p>
                 </div>
-                <div class="container__service__img">
+                <div class="container__service__img hidden">
                     <div class="container__service__img__items container__service__img1">
                         <img src="./img/services/sv1.jpg" alt="">
                         <p>Tập luyện với Huấn luyện viên cá nhân, hiệu quả nhân ba</p>
@@ -437,6 +437,7 @@
     </div>
     <!-- overlay -->
     <div class="nen_mo"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./index.js"></script>
     <script src="./navigation_javascript/menu.js"></script>
     <script src="./navigation_javascript/menuv2.js"></script>
