--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -155,30 +155,53 @@
                     <div class="container__main">
                         <div class="container__pictures">
                             <div class="container__pictures_big">
-                                <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg" alt="#"
-                                    class="container__pictures_big__img">
+                                <div class="container__pictures_big__slide">
+                                    <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg" alt="#"
+                                        class="container__pictures_big__img">
+                                </div>
+                                <div class="container__pictures_big__slide">
+                                    <img src="../img/whey/1_ON_Gold_Standard_100/21_ON_Gold_Standard_100.jpg" alt="#"
+                                        class="container__pictures_big__img">
+                                </div>
+                                <div class="container__pictures_big__slide">
+                                    <img src="../img/whey/1_ON_Gold_Standard_100/31_ON_Gold_Standard_100.jpg" alt="#"
+                                        class="container__pictures_big__img">
+                                </div>
+                                <div class="container__pictures_big__slide">
+                                    <img src="../img/whey/1_ON_Gold_Standard_100/41_ON_Gold_Standard_100.jpg" alt="#"
+                                        class="container__pictures_big__img">
+                                </div>
+                                <div class="container__pictures_big__slide">
+                                    <img src="../img/whey/1_ON_Gold_Standard_100/51_ON_Gold_Standard_100.jpg" alt="#"
+                                        class="container__pictures_big__img">
+                                </div>
                             </div>
                             <div class="container__pictures_other">
                                 <ul class="container__pictures_other__list">
                                     <li class="container__pictures_other__item">
                                         <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
-                                            alt="#" class="container__pictures_other__img">
+                                            alt="#" class="container__pictures_other__img"
+                                            onclick="currentSlide(1)">
                                     </li>
                                     <li class="container__pictures_other__item">
                                         <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
-                                            alt="#" class="container__pictures_other__img">
+                                            alt="#" class="container__pictures_other__img"
+                                            onclick="currentSlide(2)">
                                     </li>
                                     <li class="container__pictures_other__item">
                                         <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
-                                            alt="#" class="container__pictures_other__img">
+                                            alt="#" class="container__pictures_other__img"
+                                            onclick="currentSlide(3)">
                                     </li>
                                     <li class="container__pictures_other__item">
                                         <img src="../img/equipment/10_Foam_Roller/310_Foam_Roller.jpg"
-                                            alt="#" class="container__pictures_other__img">
+                                            alt="#" class="container__pictures_other__img"
+                                            onclick="currentSlide(4)">
                                     </li>
                                     <li class="container__pictures_other__item">
                                         <img src="../img/whey/1_ON_Gold_Standard_100/11_ON_Gold_Standard_100.jpg"
-                                            alt="#" class="container__pictures_other__img">
+                                            alt="#" class="container__pictures_other__img"
+                                            onclick="currentSlide(5)">
                                     </li>
                                 </ul>
                             </div>
