--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <!-- LE VAN TIEN -->
             <div class="feedback">
                 <h1>CƠ SỞ VẬT CHẤT</h1>
-                <h2>CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày.</h2>
+                <h2>GYMZ dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày.</h2>
             </div>
             <div class="container__shop">
                 <div class="container__images">
@@ -229,7 +229,7 @@
             </div>
 
             <div class="container__story">
-                <h1>NHỮNG THAY ĐỔI KHI TẬP TẠI CLOSE-AIGYM</h1>
+                <h1>Những thay đổi khi tập tại GYMZ</h1>
                 <div class="container__change">
                     <div class="change__box">
                         <div class="change__box__text">
@@ -291,6 +291,51 @@
                     </div>
                     <span class="change__input__error"></span>
                     <button class="change__submit" type="submit">NHẬN KẾT QUẢ</button>
+                </div>
+            </div>
+
+            <div class="container__history">
+                <div class="container__history__header">
+                    <h1>Hãy đến với chúng tôi!</h1>
+                    <p>Giúp bạn tăng cường sức khỏe là nhiệm vụ hàng đầu của chúng tôi.</p>
+                </div>
+                <div class="container__history__row">
+                    <div class="container__history__column">
+                        <img src="./img/history/img4.jpg" style="width:100%">
+                        <img src="./img/history/img15.jpg" style="width:100%">
+                        <img src="./img/history/img18.jpg" style="width:100%">
+                        <img src="./img/history/img1.jpg" style="width:100%">
+                        <img src="./img/history/img12.jpg" style="width:100%">
+                        <img src="./img/history/img24.jpg" style="width:100%">
+                        <img src="./img/history/img7.jpg" style="width:100%">
+                    </div>
+                    <div class="container__history__column">
+                        <img src="./img/history/img26.jpg" style="width:100%">
+                        <img src="./img/history/img23.jpg" style="width:100%">
+                        <img src="./img/history/img21.jpg" style="width:100%">
+                        <img src="./img/history/img11.jpg" style="width:100%">
+                        <img src="./img/history/img5.jpg" style="width:100%">
+                        <img src="./img/history/img13.jpg" style="width:100%">
+                        <img src="./img/history/img18.jpg" style="width:100%">
+                    </div>
+                    <div class="container__history__column">
+                        <img src="./img/history/img14.jpg" style="width:100%">
+                        <img src="./img/history/img2.jpg" style="width:100%">
+                        <img src="./img/history/img16.jpg" style="width:100%">
+                        <img src="./img/history/img17.jpg" style="width:100%">
+                        <img src="./img/history/img3.jpg" style="width:100%">
+                        <img src="./img/history/img19.jpg" style="width:100%">
+                        <img src="./img/history/img20.jpg" style="width:100%">
+                    </div>
+                    <div class="container__history__column">
+                        <img src="./img/history/img10.jpg" style="width:100%">
+                        <img src="./img/history/img22.jpg" style="width:100%">
+                        <img src="./img/history/img9.jpg" style="width:100%">
+                        <img src="./img/history/img6.jpg" style="width:100%">
+                        <img src="./img/history/img25.jpg" style="width:100%">
+                        <img src="./img/history/img8.jpg" style="width:100%">
+                        <img src="./img/history/img21.jpg" style="width:100%">
+                    </div>
                 </div>
             </div>
 
