--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -66,45 +66,56 @@
                         </a>
                         <div class="content">
                             <div class="logo">
-                                <a class="logo__inner" href="">
-                                    GYM<span>Z</span>
-                                </a>
+                                <ul class="account__login__center">
+                                    <li class="account__login">
+                                        <a class="account__login__inner" href="">
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="account__about">
+                                    <a class="account__name" href="#">
+                                        USERNAME
+                                    </a>
+                                    <a class="account__code" href="#">
+                                        GYMZ001
+                                    </a>
+                                </div>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a href="../index.html">
+                            <a class="content__inner" href="../index.html">
                                 <i class='bx bxs-home'></i>
                                 <span class="noidung__text1">
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a href="./forum.html">
-                                <i class='bx bx-world' ></i>
+                            <a class="content__inner" href="./forum.html">
+                                <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
                                     DIỄN ĐÀN
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
-                                <a href="">
+                                <b class="content__inner" href="">
                                     <i class='bx bx-grid-alt'></i>
                                     <span class="noidung__text1">
                                         DỊCH VỤ
                                     </span>
-                                </a>
+                                </b>
                                 <div class="noidung222">
-                                    <a href="./card.html"><i class='bx bxs-tag-alt' ></i> THẺ HỘI VIÊN</a>
-                                    <a href="./train.html"><i class='bx bxs-tag-alt' ></i> HUẤN LUYỆN VIÊN</a>
-                                    <a href="./shop.html"><i class='bx bxs-tag-alt' ></i> CỬA HÀNG WHEY</a>
-                                    <a href="./chatbox.html"><i class='bx bxs-tag-alt' ></i> CHAT ONLINE</a>
+                                    <a class="content__inner" href="./card.html"><i class='bx bxs-tag-alt'></i> THẺ HỘI VIÊN</a>
+                                    <a class="content__inner" href="./train.html"><i class='bx bxs-tag-alt'></i> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./shop.html"><i class='bx bxs-tag-alt'></i> CỬA HÀNG WHEY</a>
+                                    <a class="content__inner" href="./chatbox.html"><i class='bx bxs-tag-alt'></i> CHAT ONLINE</a>
                                 </div>
                             </div>
-                            <a href="./promotion.html">
-                                <i class='bx bxs-purchase-tag' ></i>
+                            <a class="content__inner" href="./promotion.html">
+                                <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
                                 </span>
                             </a>
-                            <a href="#">
-                                <i class='bx bx-code-alt' ></i>
+                            <a class="content__inner" href="#">
+                                <i class='bx bx-code-alt'></i>
                                 <span class="noidung__text1">
                                     TẬP THỬ MIỄN PHÍ
                                 </span>
@@ -295,7 +306,7 @@
     <div class="nen_mo"></div>
     <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script src="../navigation_javascript/menu.js"></script>
+    <!-- <script src="../navigation_javascript/menu.js"></script> -->
 </body>
 
 </html>
