--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
                                         </a>
                                     </li>
                                 </ul>
-                                <a class="account__name" href="#">
-                                    USERNAME
-                                </a>
+                                <div class="account__about">
+                                    <a class="account__name" href="#">
+                                        USERNAME
+                                    </a>
+                                    <a class="account__code" href="#">
+                                        GYMZ001
+                                    </a>
+                                </div>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
                             <a class="content__inner" href="./index.html">
@@ -125,17 +130,17 @@
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
-                                <a class="content__inner" href="">
+                                <b class="content__inner" href="">
                                     <i class='bx bx-grid-alt'></i>
                                     <span class="noidung__text1">
                                         DỊCH VỤ
                                     </span>
-                                </a>
+                                </b>
                                 <div class="noidung222">
-                                    <a class="content__inner" href="./card.html"><i class='bx bxs-tag-alt'></i> THẺ HỘI VIÊN</a>
-                                    <a class="content__inner" href="./train.html"><i class='bx bxs-tag-alt'></i> HUẤN LUYỆN VIÊN</a>
-                                    <a class="content__inner" href="./shop.html"><i class='bx bxs-tag-alt'></i> CỬA HÀNG WHEY</a>
-                                    <a class="content__inner" href="./chatbox.html"><i class='bx bxs-tag-alt'></i> CHAT ONLINE</a>
+                                    <a class="content__inner" href="./navigation/card.html"><i class='bx bxs-tag-alt'></i> THẺ HỘI VIÊN</a>
+                                    <a class="content__inner" href="./navigation/train.html"><i class='bx bxs-tag-alt'></i> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./navigation/shop.html"><i class='bx bxs-tag-alt'></i> CỬA HÀNG WHEY</a>
+                                    <a class="content__inner" href="./navigation/chatbox.html"><i class='bx bxs-tag-alt'></i> CHAT ONLINE</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./navigation/promotion.html">
@@ -585,7 +590,7 @@
     <div class="nen_mo"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./index.js"></script>
-    <script src="./navigation_javascript/menu.js"></script>
+    <!-- <script src="./navigation_javascript/menu.js"></script> -->
     <script src="./navigation_javascript/menuv2.js"></script>
 </body>
 
