--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -73,54 +73,65 @@
                 <div class="header__inner__menu">
                     <div class="bt_dropdown">
                         <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                            <div class="bt_dropdown">
-                                <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                                    <i class='bx bx-menu'></i>
-                                </a>
-                                <div class="content">
-                                    <div class="content">
-                                        <div class="logo">
-                                            <a class="logo__inner" href="">
-                                                GYM<span>Z</span>
-                                            </a>
-                                            <a class="logo__inner" href="">
-                                                GYM<span>Z</span>
-                                            </a>
-                                            <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
-                                        </div>
-                                        <a href="../index.html">
-                                            <i class='bx bxs-home'></i>
-                                            <span class="noidung__text1">
-                                                TRANG CHỦ
-                                            </span>
+                            <i class='bx bx-menu'></i>
+                        </a>
+                        <div class="content">
+                            <div class="logo">
+                                <ul class="account__login__center">
+                                    <li class="account__login">
+                                        <a class="account__login__inner" href="">
                                         </a>
-                                        <a href="./forum.html">
-                                            <i class='bx bx-world'></i>
-                                            <span class="noidung__text1">
-                                                DIỄN ĐÀN
-                                            </span>
-                                        </a>
-                                        <a href="#">
-                                            <i class='bx bxs-file'></i>
-                                            <span class="noidung__text1">
-                                                DỊCH VỤ
-                                            </span>
-                                        </a>
-                                        <a href="./promotion.html">
-                                            <i class='bx bxs-purchase-tag'></i>
-                                            <span class="noidung__text1">
-                                                KHUYẾN MÃI
-                                            </span>
-                                        </a>
-                                        <a href="#">
-                                            <i class='bx bx-code-alt'></i>
-                                            <span class="noidung__text1">
-                                                TẬP THỬ MIỄN PHÍ
-                                            </span>
-                                        </a>
-                                    </div>
+                                    </li>
+                                </ul>
+                                <div class="account__about">
+                                    <a class="account__name" href="#">
+                                        USERNAME
+                                    </a>
+                                    <a class="account__code" href="#">
+                                        GYMZ001
+                                    </a>
+                                </div>
+                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                            </div>
+                            <a class="content__inner" href="../index.html">
+                                <i class='bx bxs-home'></i>
+                                <span class="noidung__text1">
+                                    TRANG CHỦ
+                                </span>
+                            </a>
+                            <a class="content__inner" href="./forum.html">
+                                <i class='bx bx-world'></i>
+                                <span class="noidung__text1">
+                                    DIỄN ĐÀN
+                                </span>
+                            </a>
+                            <div class="submenu" href="#" onclick="toggleNoidung222(event)">
+                                <b class="content__inner" href="">
+                                    <i class='bx bx-grid-alt'></i>
+                                    <span class="noidung__text1">
+                                        DỊCH VỤ
+                                    </span>
+                                </b>
+                                <div class="noidung222">
+                                    <a class="content__inner" href="./card.html"><i class='bx bxs-tag-alt'></i> THẺ HỘI VIÊN</a>
+                                    <a class="content__inner" href="./train.html"><i class='bx bxs-tag-alt'></i> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./shop.html"><i class='bx bxs-tag-alt'></i> CỬA HÀNG WHEY</a>
+                                    <a class="content__inner" href="./chatbox.html"><i class='bx bxs-tag-alt'></i> CHAT ONLINE</a>
                                 </div>
                             </div>
+                            <a class="content__inner" href="./promotion.html">
+                                <i class='bx bxs-purchase-tag'></i>
+                                <span class="noidung__text1">
+                                    KHUYẾN MÃI
+                                </span>
+                            </a>
+                            <a class="content__inner" href="#">
+                                <i class='bx bx-code-alt'></i>
+                                <span class="noidung__text1">
+                                    TẬP THỬ MIỄN PHÍ
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
